--- a/src/Feed.css
+++ b/src/Feed.css
@@ -17,3 +17,14 @@
   font-size: 20px;
   font-weight: 800;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.feed::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.feed {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
